@@ -14,6 +14,7 @@ New Features:
 	* Added shortcuts for the navigation across the worksheets (Ctrl+PageUp, Ctrl+PageDown)
 	* [Julia] Add support for class member autocompletion
 	* [Python] Add runtime autocompletion
+	* Add action in 'View' submenu for zoom reset.
 
 Bug fixes:
 	* BUG 363606 - [Python] Different python sessions shouldn't share the same variables
